added some data cleaning in two column analysis

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
     "    null_values = df.isnull().sum()\n",
     "    print(null_values)\n",
     "    print(\"\\n\")\n",
-    "    numdf = df.select_dtypes(include=['number'])\n",
+    "    numdf = df.select_dtypes(include=['number']).dropna()\n",
     "    print(\"DESCRIPTIVE STATISTICS (NUMERICAL)\".center(60, \"-\"))\n",
     "    des = numdf.describe()\n",
     "    print(tabulate(des, headers='keys', tablefmt='psql'))\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,12 +182,25 @@
     "    if not col1_actual or not col2_actual:\n",
     "        print(f\"❌ Error: One or both columns '{col1}' or '{col2}' not found in DataFrame.\")\n",
     "        return\n",
+    "    \n",
+    " \n",
+    "    \n",
+    "    # df = df[[col1_actual, col2_actual]].copy()\n",
+    "\n",
+    "    # # Convert columns to numeric (handle errors)\n",
+    "    df[col1_actual] = pd.to_numeric(df[col1_actual], errors='coerce')\n",
+    "    df[col2_actual] = pd.to_numeric(df[col2_actual], errors='coerce')\n",
+    "\n",
+    "    # # Handle missing values\n",
+    "    df.dropna(inplace=True)  # Remove rows with NaNs\n",
+    "    # # OR: Fill missing values with mean\n",
+    "    # df[col1_actual].fillna(0, inplace=True)\n",
+    "    # df[col2_actual].fillna(0, inplace=True)\n",
+    "\n",
+    "    # # Remove duplicates\n",
+    "    # df.drop_duplicates(inplace=True)\n",
     "    column1_data = df[col1_actual]\n",
     "    column2_data = df[col2_actual]\n",
-    "    # print(f\"Data for {col1_actual}:\\n\", column1_data.head(), \"\\n\")\n",
-    "    # print(f\"Data for {col2_actual}:\\n\", column2_data.head(), \"\\n\")\n",
-    "    \n",
-    "\n",
     "\n",
     "    print(\"=============================== Preview ================================\")\n",
     "    column1_data_df = column1_data.head().to_frame()\n",
@@ -222,20 +235,9 @@
     "\n",
     "    plt.figure(figsize=(12, 10))\n",
     "\n",
-    "    # 1️⃣ Scatter Plot (Top Left)\n",
-    "    # plt.subplot(2, 2, 1)\n",
-    "    # plt.scatter(df[col1_actual], df[col2_actual], alpha=0.7)\n",
-    "    # plt.xlabel(col1_actual)\n",
-    "    # plt.ylabel(col2_actual)\n",
-    "    # plt.title(\"Scatter Plot\")\n",
-    "\n",
-    "\n",
-    "    # plt.subplot(2, 2, 1)\n",
+    "   \n",
     "    sample_df = df.sample(n=1000, random_state=42)  # Reduce to 1000 points\n",
-    "    # plt.scatter(sample_df[col1_actual], sample_df[col2_actual], alpha=0.3)  # Add transparency\n",
-    "    # plt.xlabel(col1_actual)\n",
-    "    # plt.ylabel(col2_actual)\n",
-    "    # plt.title(\"Scatter Plot (Sampled)\")\n",
+    "   \n",
     "\n",
     "    plt.subplot(2, 2, 1)\n",
     "\n",
@@ -248,28 +250,7 @@
     "    plt.ylabel(col2_actual)\n",
     "    plt.title(\"Scatter Plot (Jittered)\")\n",
     "\n",
-    "    # 2️⃣ Line Plot (Top Right)\n",
-    "    # plt.subplot(2, 2, 2)\n",
-    "    # plt.plot(df[col1_actual], df[col2_actual], marker='o', linestyle='-')\n",
-    "    # plt.xlabel(col1_actual)\n",
-    "    # plt.ylabel(col2_actual)\n",
-    "    # plt.title(\"Line Plot\")\n",
-    "\n",
-    "    # plt.subplot(2, 2, 2)\n",
-    "    # df['RollingMean'] = df[col2_actual].rolling(window=50).mean()  # Smoothen\n",
-    "    # plt.plot(df.index, df['RollingMean'], linestyle='-', alpha=0.7)\n",
-    "    # plt.xlabel(col1_actual)\n",
-    "    # plt.ylabel(col2_actual)\n",
-    "    # plt.title(\"Line Plot (Rolling Mean)\")\n",
-    "\n",
-    "    # plt.subplot(2, 2, 2)\n",
-    "    # rolling_window = 100  # Adjust window size based on dataset size\n",
-    "    # df['RollingMean'] = df[col2_actual].rolling(window=rolling_window).mean()\n",
-    "\n",
-    "    # plt.plot(df.index[::10], df['RollingMean'][::10], linestyle='-', alpha=0.7)  # Downsample every 10th point\n",
-    "    # plt.xlabel(col1_actual)\n",
-    "    # plt.ylabel(col2_actual)\n",
-    "    # plt.title(f\"Line Plot (Smoothed, Window={rolling_window})\")\n",
+    "    \n",
     "\n",
     "\n",
     "    plt.subplot(2, 2, 2)\n",
@@ -287,14 +268,6 @@
     "    plt.grid(True, linestyle='--', alpha=0.5)  # Optional: Add grid for readability\n",
     "\n",
     "\n",
-    "    # 3️⃣ Histogram (Bottom Left)\n",
-    "    # plt.subplot(2, 2, 3)\n",
-    "    # plt.hist(df[col1_actual], alpha=0.5, label=col1_actual, bins=20)\n",
-    "    # plt.hist(df[col2_actual], alpha=0.5, label=col2_actual, bins=20)\n",
-    "    # plt.legend()\n",
-    "    # plt.xlabel(\"Value\")\n",
-    "    # plt.ylabel(\"Frequency\")\n",
-    "    # plt.title(\"Histogram\")\n",
     "\n",
     "    plt.subplot(2, 2, 3)\n",
     "    plt.hist(df[col1_actual], bins=30, alpha=0.7, density=True, color='darkblue', label=col1_actual)  \n",
@@ -305,14 +278,6 @@
     "    plt.title(\"Histogram (Optimized)\")\n",
     "\n",
     "\n",
-    "    # 4️⃣ Correlation Heatmap (Bottom Right)\n",
-    "    # plt.subplot(2, 2, 4)\n",
-    "    # corr_matrix = df[[col1_actual, col2_actual]].corr()\n",
-    "    # cax = plt.matshow(corr_matrix, cmap='coolwarm', vmin=-1, vmax=1, fignum=False)\n",
-    "    # plt.colorbar(cax)\n",
-    "    # plt.xticks([0, 1], [col1_actual, col2_actual], rotation=45)\n",
-    "    # plt.yticks([0, 1], [col1_actual, col2_actual])\n",
-    "    # plt.title(\"Correlation Heatmap\")\n",
     "\n",
     "    plt.subplot(2, 2, 4)\n",
     "    corr_matrix = df[[col1_actual, col2_actual]].corr()\n",
@@ -326,49 +291,115 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
+    "    # print(1)\n",
+    "    # col_names = {col.lower(): col for col in df.columns}\n",
+    "    # print(2)\n",
+    "    # col1_actual = col_names.get(col1.lower())\n",
+    "    # print(3)\n",
+    "    # col2_actual = col_names.get(col2.lower())\n",
+    "    # print(4)\n",
+    "    # if not col1_actual or not col2_actual:\n",
+    "    #     print(f\"❌ Error: One or both columns '{col1}' or '{col2}' not found in DataFrame.\")\n",
+    "    #     return\n",
     "\n",
+    "    # # Extracting column data\n",
+    "    # df[col1_actual] = pd.to_numeric(df[col1_actual], errors='coerce')\n",
+    "    # print(5)\n",
     "\n",
+    "    # column1_data = df[col1_actual]\n",
+    "    # print(6)\n",
+    "    # column2_data = df[col2_actual]\n",
+    "    # print(7)\n",
     "\n",
-    "#     corr_matrix = df[[col1_actual, col2_actual]].corr()\n",
-    "\n",
-    "# # Create a figure for the heatmap\n",
-    "#     plt.figure(figsize=(6, 4))\n",
-    "\n",
-    "#     # Create the heatmap using matshow\n",
-    "#     cax = plt.matshow(corr_matrix, cmap='coolwarm', vmin=-1, vmax=1)\n",
-    "\n",
-    "#     # Add color bar to the side of the heatmap\n",
-    "#     plt.colorbar(cax)\n",
-    "\n",
-    "#     # Set labels for the axes\n",
-    "#     plt.xticks([0, 1], [col1_actual, col2_actual], rotation=45)\n",
-    "#     plt.yticks([0, 1], [col1_actual, col2_actual])\n",
-    "\n",
-    "#     # Set the title of the plot\n",
-    "#     plt.title(f\"Correlation Heatmap: {col1_actual} vs {col2_actual}\")\n",
-    "\n",
-    "#     # Show the plot\n",
-    "#     plt.show()\n",
-    "    # plt.scatter(column1_data, column2_data)\n",
+    "    # # ====== Data Cleaning ======\n",
+    "    # df = df[[col1_actual, col2_actual]].copy()  # Keep only relevant columns\n",
+    "    # print(8)\n",
+    "    # df.fillna(0, inplace=True)  # Replace NaN values with 0\n",
+    "    # print(9)\n",
+    "    # df = df.drop_duplicates()  # Remove duplicate rows\n",
+    "    # print(10)\n",
+    "    \n",
+    "    # # Check if the column contains only non-numeric data\n",
+    "    # if pd.to_numeric(df[col1_actual], errors='coerce').isna().all():\n",
+    "    #     print(f\"❌ Error: Column '{col1_actual}' contains only non-numeric data.\")\n",
+    "    #     return\n",
+    "    # if pd.to_numeric(df[col2_actual], errors='coerce').isna().all():\n",
+    "    #     print(f\"❌ Error: Column '{col2_actual}' contains only non-numeric data.\")\n",
+    "    #     return\n",
+    "   \n",
+    "    \n",
+    "    # df[col1_actual] = pd.to_numeric(df[col1_actual], errors='coerce')  # Ensure numeric\n",
+    "    # print(11)\n",
+    "    # df[col2_actual] = pd.to_numeric(df[col2_actual], errors='coerce')\n",
+    "    # print(12)\n",
+    "    # df.fillna(0, inplace=True)  # Replace NaNs after type conversion with 0\n",
+    "    # print(13)\n",
+    "    # df = df[(df[col1_actual] >= 0) & (df[col2_actual] >= 0)]  # Remove negative values\n",
+    "    # print(7)\n",
+    "    \n",
+    "    # print(\"=============================== Preview ================================\")\n",
+    "    # print(f\"Data for {col1_actual}:\")\n",
+    "    # print(tabulate(df[[col1_actual]].head(), headers='keys', tablefmt='psql'), \"\\n\")\n",
+    "    # print(f\"Data for {col2_actual}:\")\n",
+    "    # print(tabulate(df[[col2_actual]].head(), headers='keys', tablefmt='psql'), \"\\n\")\n",
+    "    \n",
+    "    # print(f\"================================ Summary Statistics for {col1_actual} ======================================\")\n",
+    "    # print(tabulate(df[col1_actual].describe().to_frame().reset_index(), headers=['Statistic', col1_actual], tablefmt='psql'), \"\\n\")\n",
+    "    \n",
+    "    # print(f\"================================ Summary Statistics for {col2_actual} ======================================\")\n",
+    "    # print(tabulate(df[col2_actual].describe().to_frame().reset_index(), headers=['Statistic', col2_actual], tablefmt='psql'), \"\\n\")\n",
+    "    \n",
+    "    # null_count_col1 = column1_data.isnull().sum()\n",
+    "    # null_count_col2 = column2_data.isnull().sum()\n",
+    "    # print(f\"Null values in {col1_actual}: {null_count_col1}\")\n",
+    "    # print(f\"Null values in {col2_actual}: {null_count_col2}\\n\")\n",
+    "    \n",
+    "    # correlation = df[col1_actual].corr(df[col2_actual])\n",
+    "    # print(f\"Correlation between {col1_actual} and {col2_actual}: {correlation}\\n\")\n",
+    "    \n",
+    "    # plt.figure(figsize=(12, 10))\n",
+    "    \n",
+    "    # sample_df = df.sample(n=min(1000, len(df)), random_state=42)  # Sample up to 1000 points\n",
+    "    \n",
+    "    # plt.subplot(2, 2, 1)\n",
+    "    # jitter_x = np.random.normal(0, 0.05, size=len(sample_df[col1_actual]))\n",
+    "    # jitter_y = np.random.normal(0, 0.05, size=len(sample_df[col2_actual]))\n",
+    "    # plt.scatter(sample_df[col1_actual] + jitter_x, sample_df[col2_actual] + jitter_y, alpha=0.3)\n",
     "    # plt.xlabel(col1_actual)\n",
     "    # plt.ylabel(col2_actual)\n",
-    "    # plt.title(f\"Scatter Plot: {col1_actual} vs {col2_actual}\")\n",
-    "    # plt.show()\n",
-    "    # plt.plot(column1_data, column2_data, marker='o', linestyle='-')\n",
+    "    # plt.title(\"Scatter Plot (Jittered)\")\n",
+    "    \n",
+    "    # plt.subplot(2, 2, 2)\n",
+    "    # rolling_window = 500\n",
+    "    # df['RollingMean'] = df[col2_actual].rolling(window=rolling_window, min_periods=1).mean()\n",
+    "    # plt.plot(df.index, df['RollingMean'], linestyle='-')\n",
     "    # plt.xlabel(col1_actual)\n",
     "    # plt.ylabel(col2_actual)\n",
-    "    # plt.title(f\"Line Plot: {col1_actual} vs {col2_actual}\")\n",
-    "    # plt.show()\n",
-    "    # plt.hist(column1_data, alpha=0.5, label=col1_actual)\n",
-    "    # plt.hist(column2_data, alpha=0.5, label=col2_actual)\n",
+    "    # plt.title(f\"Line Plot (Smoothed, Window={rolling_window})\")\n",
+    "    # plt.grid(True, linestyle='--', alpha=0.5)\n",
+    "    \n",
+    "    # plt.subplot(2, 2, 3)\n",
+    "    # plt.hist(df[col1_actual], bins=30, alpha=0.7, density=True, color='darkblue', label=col1_actual)  \n",
+    "    # plt.hist(df[col2_actual], bins=30, alpha=0.7, density=True, color='darkred', label=col2_actual)  \n",
     "    # plt.legend()\n",
     "    # plt.xlabel(\"Value\")\n",
-    "    # plt.ylabel(\"Frequency\")\n",
-    "    # plt.title(f\"Histogram: {col1_actual} and {col2_actual}\")\n",
+    "    # plt.ylabel(\"Density\")\n",
+    "    # plt.title(\"Histogram (Optimized)\")\n",
+    "    \n",
+    "    # plt.subplot(2, 2, 4)\n",
+    "    # corr_matrix = df[[col1_actual, col2_actual]].corr()\n",
+    "    # plt.imshow(corr_matrix, cmap='coolwarm', vmin=-1, vmax=1)\n",
+    "    # plt.colorbar()\n",
+    "    # plt.xticks([0, 1], [col1_actual, col2_actual], rotation=45)\n",
+    "    # plt.yticks([0, 1], [col1_actual, col2_actual])\n",
+    "    # plt.title(\"Correlation Heatmap\")\n",
+    "    \n",
+    "    # plt.tight_layout()\n",
     "    # plt.show()\n",
-    "    # df[[col1_actual, col2_actual]].boxplot()\n",
-    "    # plt.title(f\"Box Plot: {col1_actual} and {col2_actual}\")\n",
-    "    # plt.show()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "        \n",
     "\n",
     "        \n"
@@ -376,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,10 +549,11 @@
     "          path = input(\"Enter File Path of CSV File: \")\n",
     "          try:\n",
     "              df = pd.read_csv(path, encoding='unicode_escape')\n",
+    "              print(\"egmerjngkjerner fjer\")\n",
     "              Analyze_Data(df)\n",
     "          except (FileNotFoundError, Exception) as e:\n",
     "              print(f\"Error: {e}\")\n",
-    "              print(\"CSV File not found. Try again !\")\n",
+    "            #   print(\"CSV File not found. Try again !\")\n",
     "               \n",
     "        elif(choice==\"2\"):\n",
     "              path = input(\"Enter File Path of Parquet File: \")\n",
@@ -548,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +667,7 @@
     "          b=False\n",
     "    else:\n",
     "        print(\"Please Enter Valid Choice !\")\n",
-    "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\Diwa2li Sales Data.csv\n",
+    "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\Diwali Sales Data.csv\n",
     "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\road_accident_dataset.csv\n",
     "# D:\\\\shivam\n"
    ]
