--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,113 +295,7 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
-    "    # print(1)\n",
-    "    # col_names = {col.lower(): col for col in df.columns}\n",
-    "    # print(2)\n",
-    "    # col1_actual = col_names.get(col1.lower())\n",
-    "    # print(3)\n",
-    "    # col2_actual = col_names.get(col2.lower())\n",
-    "    # print(4)\n",
-    "    # if not col1_actual or not col2_actual:\n",
-    "    #     print(f\"❌ Error: One or both columns '{col1}' or '{col2}' not found in DataFrame.\")\n",
-    "    #     return\n",
-    "\n",
-    "    # # Extracting column data\n",
-    "    # df[col1_actual] = pd.to_numeric(df[col1_actual], errors='coerce')\n",
-    "    # print(5)\n",
-    "\n",
-    "    # column1_data = df[col1_actual]\n",
-    "    # print(6)\n",
-    "    # column2_data = df[col2_actual]\n",
-    "    # print(7)\n",
-    "\n",
-    "    # # ====== Data Cleaning ======\n",
-    "    # df = df[[col1_actual, col2_actual]].copy()  # Keep only relevant columns\n",
-    "    # print(8)\n",
-    "    # df.fillna(0, inplace=True)  # Replace NaN values with 0\n",
-    "    # print(9)\n",
-    "    # df = df.drop_duplicates()  # Remove duplicate rows\n",
-    "    # print(10)\n",
     "    \n",
-    "    # # Check if the column contains only non-numeric data\n",
-    "    # if pd.to_numeric(df[col1_actual], errors='coerce').isna().all():\n",
-    "    #     print(f\"❌ Error: Column '{col1_actual}' contains only non-numeric data.\")\n",
-    "    #     return\n",
-    "    # if pd.to_numeric(df[col2_actual], errors='coerce').isna().all():\n",
-    "    #     print(f\"❌ Error: Column '{col2_actual}' contains only non-numeric data.\")\n",
-    "    #     return\n",
-    "   \n",
-    "    \n",
-    "    # df[col1_actual] = pd.to_numeric(df[col1_actual], errors='coerce')  # Ensure numeric\n",
-    "    # print(11)\n",
-    "    # df[col2_actual] = pd.to_numeric(df[col2_actual], errors='coerce')\n",
-    "    # print(12)\n",
-    "    # df.fillna(0, inplace=True)  # Replace NaNs after type conversion with 0\n",
-    "    # print(13)\n",
-    "    # df = df[(df[col1_actual] >= 0) & (df[col2_actual] >= 0)]  # Remove negative values\n",
-    "    # print(7)\n",
-    "    \n",
-    "    # print(\"=============================== Preview ================================\")\n",
-    "    # print(f\"Data for {col1_actual}:\")\n",
-    "    # print(tabulate(df[[col1_actual]].head(), headers='keys', tablefmt='psql'), \"\\n\")\n",
-    "    # print(f\"Data for {col2_actual}:\")\n",
-    "    # print(tabulate(df[[col2_actual]].head(), headers='keys', tablefmt='psql'), \"\\n\")\n",
-    "    \n",
-    "    # print(f\"================================ Summary Statistics for {col1_actual} ======================================\")\n",
-    "    # print(tabulate(df[col1_actual].describe().to_frame().reset_index(), headers=['Statistic', col1_actual], tablefmt='psql'), \"\\n\")\n",
-    "    \n",
-    "    # print(f\"================================ Summary Statistics for {col2_actual} ======================================\")\n",
-    "    # print(tabulate(df[col2_actual].describe().to_frame().reset_index(), headers=['Statistic', col2_actual], tablefmt='psql'), \"\\n\")\n",
-    "    \n",
-    "    # null_count_col1 = column1_data.isnull().sum()\n",
-    "    # null_count_col2 = column2_data.isnull().sum()\n",
-    "    # print(f\"Null values in {col1_actual}: {null_count_col1}\")\n",
-    "    # print(f\"Null values in {col2_actual}: {null_count_col2}\\n\")\n",
-    "    \n",
-    "    # correlation = df[col1_actual].corr(df[col2_actual])\n",
-    "    # print(f\"Correlation between {col1_actual} and {col2_actual}: {correlation}\\n\")\n",
-    "    \n",
-    "    # plt.figure(figsize=(12, 10))\n",
-    "    \n",
-    "    # sample_df = df.sample(n=min(1000, len(df)), random_state=42)  # Sample up to 1000 points\n",
-    "    \n",
-    "    # plt.subplot(2, 2, 1)\n",
-    "    # jitter_x = np.random.normal(0, 0.05, size=len(sample_df[col1_actual]))\n",
-    "    # jitter_y = np.random.normal(0, 0.05, size=len(sample_df[col2_actual]))\n",
-    "    # plt.scatter(sample_df[col1_actual] + jitter_x, sample_df[col2_actual] + jitter_y, alpha=0.3)\n",
-    "    # plt.xlabel(col1_actual)\n",
-    "    # plt.ylabel(col2_actual)\n",
-    "    # plt.title(\"Scatter Plot (Jittered)\")\n",
-    "    \n",
-    "    # plt.subplot(2, 2, 2)\n",
-    "    # rolling_window = 500\n",
-    "    # df['RollingMean'] = df[col2_actual].rolling(window=rolling_window, min_periods=1).mean()\n",
-    "    # plt.plot(df.index, df['RollingMean'], linestyle='-')\n",
-    "    # plt.xlabel(col1_actual)\n",
-    "    # plt.ylabel(col2_actual)\n",
-    "    # plt.title(f\"Line Plot (Smoothed, Window={rolling_window})\")\n",
-    "    # plt.grid(True, linestyle='--', alpha=0.5)\n",
-    "    \n",
-    "    # plt.subplot(2, 2, 3)\n",
-    "    # plt.hist(df[col1_actual], bins=30, alpha=0.7, density=True, color='darkblue', label=col1_actual)  \n",
-    "    # plt.hist(df[col2_actual], bins=30, alpha=0.7, density=True, color='darkred', label=col2_actual)  \n",
-    "    # plt.legend()\n",
-    "    # plt.xlabel(\"Value\")\n",
-    "    # plt.ylabel(\"Density\")\n",
-    "    # plt.title(\"Histogram (Optimized)\")\n",
-    "    \n",
-    "    # plt.subplot(2, 2, 4)\n",
-    "    # corr_matrix = df[[col1_actual, col2_actual]].corr()\n",
-    "    # plt.imshow(corr_matrix, cmap='coolwarm', vmin=-1, vmax=1)\n",
-    "    # plt.colorbar()\n",
-    "    # plt.xticks([0, 1], [col1_actual, col2_actual], rotation=45)\n",
-    "    # plt.yticks([0, 1], [col1_actual, col2_actual])\n",
-    "    # plt.title(\"Correlation Heatmap\")\n",
-    "    \n",
-    "    # plt.tight_layout()\n",
-    "    # plt.show()\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "        \n",
@@ -411,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +377,7 @@
     "    plt.show()\n",
     "\n",
     "    # Basic Analysis\n",
-    "    print(f\"\\nBasic Analysis of '{column_name}':\")\n",
+    "    print(f\"\\n====================================== Basic Analysis of '{column_name}' ===========================================\")\n",
     "    print(f\"Total unique values (Top {top_n} with 'Others'): {len(value_counts)}\")\n",
     "    for label, count in value_counts.items():\n",
     "        print(f\"{label}: {count} occurrences\")\n"
