--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,6 +175,102 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "def save_custom(df, col1, col2):\n",
+    "    col_names = {col.lower(): col for col in df.columns}\n",
+    "    col1_actual = col_names.get(col1.lower())\n",
+    "    col2_actual = col_names.get(col2.lower())\n",
+    "\n",
+    "    if not col1_actual or not col2_actual:\n",
+    "        print(f\"❌ Error: One or both columns '{col1}' or '{col2}' not found in DataFrame.\")\n",
+    "        return\n",
+    "\n",
+    "    if not pd.api.types.is_numeric_dtype(df[col1_actual]) or not pd.api.types.is_numeric_dtype(df[col2_actual]):\n",
+    "        print(f\"❌ Error: One or both selected columns are not numeric.\")\n",
+    "        return\n",
+    "\n",
+    "    df[col1_actual] = pd.to_numeric(df[col1_actual], errors='coerce')\n",
+    "    df[col2_actual] = pd.to_numeric(df[col2_actual], errors='coerce')\n",
+    "    df.dropna(inplace=True)  \n",
+    "\n",
+    "    # Generate report text\n",
+    "    report_lines = [\n",
+    "        \"=============================== Preview ================================\\n\",\n",
+    "        f\"Data for {col1_actual}:\\n{tabulate(df[col1_actual].head().to_frame(), headers='keys', tablefmt='psql')}\\n\",\n",
+    "        f\"Data for {col2_actual}:\\n{tabulate(df[col2_actual].head().to_frame(), headers='keys', tablefmt='psql')}\\n\",\n",
+    "        f\"================================ Summary Statistics for {col1_actual} ======================================\\n\",\n",
+    "        tabulate(df[col1_actual].describe().to_frame().reset_index(), headers=['Statistic', col1_actual], tablefmt='psql') + \"\\n\",\n",
+    "        f\"================================ Summary Statistics for {col2_actual} ======================================\\n\",\n",
+    "        tabulate(df[col2_actual].describe().to_frame().reset_index(), headers=['Statistic', col2_actual], tablefmt='psql') + \"\\n\",\n",
+    "        f\"Correlation between {col1_actual} and {col2_actual}: {df[col1_actual].corr(df[col2_actual])}\\n\"\n",
+    "    ]\n",
+    "\n",
+    "    \n",
+    "    plt.figure(figsize=(12, 10))\n",
+    "\n",
+    "\n",
+    "    plt.subplot(2, 2, 1)\n",
+    "\n",
+    "    jitter_x = np.random.normal(0, (df[col1_actual].max() - df[col1_actual].min()) * 0.02, size=len(df[col1_actual]))\n",
+    "    jitter_y = np.random.normal(0, (df[col2_actual].max() - df[col2_actual].min()) * 0.02, size=len(df[col2_actual]))\n",
+    "\n",
+    "    plt.scatter(df[col1_actual] + jitter_x, df[col2_actual] + jitter_y, alpha=0.4, edgecolor='k', linewidth=0.5)\n",
+    "    plt.xlabel(col1_actual)\n",
+    "    plt.ylabel(col2_actual)\n",
+    "    plt.title(\"Scatter Plot with Jitter\")\n",
+    "    plt.grid(True, linestyle=\"--\", alpha=0.5)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    plt.subplot(2, 2, 2)\n",
+    "    plt.plot(df.index, df[col2_actual].rolling(window=500, min_periods=1).mean(), linestyle='-')\n",
+    "    plt.xlabel(col1_actual)\n",
+    "    plt.ylabel(col2_actual)\n",
+    "    plt.title(\"Line Plot\")\n",
+    "\n",
+    "    plt.subplot(2, 2, 3)\n",
+    "    plt.hist(df[col1_actual], bins=30, alpha=0.7, density=True, color='blue', label=col1_actual)\n",
+    "    plt.hist(df[col2_actual], bins=30, alpha=0.7, density=True, color='red', label=col2_actual)\n",
+    "    plt.legend()\n",
+    "    plt.xlabel(\"Value\")\n",
+    "    plt.ylabel(\"Density\")\n",
+    "    plt.title(\"Histogram\")\n",
+    "\n",
+    "    plt.subplot(2, 2, 4)\n",
+    "    plt.imshow(df[[col1_actual, col2_actual]].corr(), cmap='coolwarm', vmin=-1, vmax=1)\n",
+    "    plt.colorbar()\n",
+    "    plt.xticks([0, 1], [col1_actual, col2_actual])\n",
+    "    plt.yticks([0, 1], [col1_actual, col2_actual])\n",
+    "    plt.title(\"Correlation Heatmap\")\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "\n",
+    "    \n",
+    "    folder_path = input(\"Enter the full path or name of the folder to save the report and heatmap: \").strip()\n",
+    "    os.makedirs(folder_path, exist_ok=True)\n",
+    "    \n",
+    "    new_folder_path = os.path.join(folder_path, \"report.txt\")\n",
+    "   \n",
+    "    \n",
+    "    \n",
+    "    with open(new_folder_path, \"w\", encoding=\"utf-8\") as file:\n",
+    "        file.writelines(report_lines)\n",
+    "\n",
+    "    visualization_file = os.path.join(folder_path, \"visualization.png\")\n",
+    "    plt.savefig(visualization_file)\n",
+    "    plt.close()\n",
+    "\n",
+    "    print(f\"✅ Report saved at: {new_folder_path}\")\n",
+    "    print(f\"✅ Visualization saved at: {visualization_file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def Custom_Analysis(df, col1, col2, num):\n",
     "    col_names = {col.lower(): col for col in df.columns}\n",
     "    col1_actual = col_names.get(col1.lower())\n",
@@ -191,20 +287,14 @@
     "        print(f\"❌ Error: Column '{col2_actual}' is not numeric.\")\n",
     "        return\n",
     "\n",
-    "    # # Convert columns to numeric (handle errors)\n",
     "    df[col1_actual] = pd.to_numeric(df[col1_actual], errors='coerce')\n",
     "    df[col2_actual] = pd.to_numeric(df[col2_actual], errors='coerce')\n",
     "\n",
-    "    # # Handle missing values\n",
-    "    df.dropna(inplace=True)  # Remove rows with NaNs\n",
-    "    # # OR: Fill missing values with mean\n",
-    "    # df[col1_actual].fillna(0, inplace=True)\n",
-    "    # df[col2_actual].fillna(0, inplace=True)\n",
-    "\n",
-    "    # # Remove duplicates\n",
-    "    # df.drop_duplicates(inplace=True)\n",
+    "    df.dropna(inplace=True)  \n",
+    "    \n",
     "    column1_data = df[col1_actual]\n",
     "    column2_data = df[col2_actual]\n",
+    "    \n",
     "\n",
     "    print(\"=============================== Preview ================================\")\n",
     "    column1_data_df = column1_data.head().to_frame()\n",
@@ -214,14 +304,12 @@
     "    print(f\"================================ Summary Statistics for {col1_actual} ======================================\")\n",
     "    column1_stats = column1_data.describe()\n",
     "\n",
-    "    # Convert the statistics to a DataFrame\n",
     "    column1_stats_df = column1_stats.to_frame().reset_index()\n",
     "    print(tabulate(column1_stats_df, headers=['Statistic', col1_actual], tablefmt='psql'), \"\\n\")\n",
     "    \n",
     "    print(f\"====================================== Summary Statistics for {col2_actual} ========================================\")\n",
     "    column2_stats = column2_data.describe()\n",
     "\n",
-    "    # Convert the statistics to a DataFrame\n",
     "    column2_stats_df = column2_stats.to_frame().reset_index()\n",
     "    print(tabulate(column2_stats_df, headers=['Statistic', col2_actual], tablefmt='psql'), \"\\n\")\n",
     "    # print(column2_data.describe(), \"\\n\")\n",
@@ -240,36 +328,36 @@
     "    plt.figure(figsize=(12, 10))\n",
     "\n",
     "   \n",
-    "    sample_df = df.sample(n=1000, random_state=42)  # Reduce to 1000 points\n",
+    "    \n",
     "   \n",
     "\n",
     "    plt.subplot(2, 2, 1)\n",
     "\n",
-    "# Add jitter to spread overlapping points\n",
-    "    jitter_x = np.random.normal(0, 0.05, size=len(sample_df[col1_actual]))\n",
-    "    jitter_y = np.random.normal(0, 0.05, size=len(sample_df[col2_actual]))\n",
     "\n",
-    "    plt.scatter(sample_df[col1_actual] + jitter_x, sample_df[col2_actual] + jitter_y, alpha=0.3)\n",
+    "\n",
+    "    jitter_x = np.random.normal(0, (df[col1_actual].max() - df[col1_actual].min()) * 0.02, size=len(df[col1_actual]))\n",
+    "    jitter_y = np.random.normal(0, (df[col2_actual].max() - df[col2_actual].min()) * 0.02, size=len(df[col2_actual]))\n",
+    "\n",
+    "    plt.scatter(df[col1_actual] + jitter_x, df[col2_actual] + jitter_y, alpha=0.4, edgecolor='k', linewidth=0.5)\n",
     "    plt.xlabel(col1_actual)\n",
     "    plt.ylabel(col2_actual)\n",
-    "    plt.title(\"Scatter Plot (Jittered)\")\n",
+    "    plt.title(\"Scatter Plot with Jitter\")\n",
+    "    plt.grid(True, linestyle=\"--\", alpha=0.5)\n",
     "\n",
     "    \n",
     "\n",
     "\n",
     "    plt.subplot(2, 2, 2)\n",
     "\n",
-    "# Smooth the data using rolling mean\n",
-    "    rolling_window = 500  # Adjust as needed\n",
+    "    rolling_window = 500  \n",
     "    df['RollingMean'] = df[col2_actual].rolling(window=rolling_window, min_periods=1).mean()\n",
     "\n",
-    "    # Create a clean line plot with markers\n",
     "    plt.plot(df.index, df['RollingMean'], linestyle='-')\n",
     "\n",
     "    plt.xlabel(col1_actual)\n",
     "    plt.ylabel(col2_actual)\n",
     "    plt.title(f\"Line Plot (Smoothed, Window={rolling_window})\")\n",
-    "    plt.grid(True, linestyle='--', alpha=0.5)  # Optional: Add grid for readability\n",
+    "    plt.grid(True, linestyle='--', alpha=0.5)  \n",
     "\n",
     "\n",
     "\n",
@@ -291,11 +379,13 @@
     "    plt.yticks([0, 1], [col1_actual, col2_actual])\n",
     "    plt.title(\"Correlation Heatmap\")\n",
     "\n",
-    "    # Adjust layout and show plot\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
-    "    \n",
+    "    save=input(\"Do you want to save this report ?\")\n",
+    "    if(save.lower()==\"y\"):\n",
+    "        save_custom(df, col1, col2)\n",
+    "\n",
     "\n",
     "\n",
     "        \n",
@@ -314,46 +404,36 @@
     "        print(f\"Column '{column_name}' not found in DataFrame.\")\n",
     "        return\n",
     "    \n",
-    "    # Count occurrences of each unique value\n",
-    "    value_counts = Counter(df[column_name].dropna())  # Drop NaN values if any\n",
+    "    value_counts = Counter(df[column_name].dropna())  \n",
     "\n",
-    "    # If the number of unique categories exceeds 'top_n', combine the less frequent ones into 'Others'\n",
     "    if len(value_counts) > top_n:\n",
-    "        # Get the most common 'top_n' categories\n",
     "        most_common = dict(value_counts.most_common(top_n))\n",
-    "        \n",
-    "        # Calculate the sum of the remaining categories and assign it to 'Others'\n",
     "        others_count = sum(count for _, count in value_counts.items() if _ not in most_common)\n",
     "        most_common[\"Others\"] = others_count\n",
     "        \n",
     "        value_counts = most_common\n",
     "\n",
-    "    # Extract labels and their counts\n",
     "    labels = list(value_counts.keys())\n",
     "    counts = list(value_counts.values())\n",
     "\n",
-    "    # Create a figure\n",
     "    plt.figure(figsize=(14, 8))\n",
     "    \n",
-    "    # Plot 1: Vertical Bar Chart\n",
-    "    plt.subplot(2, 2, 1)  # 2 rows, 2 columns, 1st plot\n",
+    "    plt.subplot(2, 2, 1)  \n",
     "    plt.bar(labels, counts, color='darkblue')\n",
     "    plt.xlabel(\"Category\")\n",
     "    plt.ylabel(\"Count\")\n",
     "    plt.title(f\"Distribution of {column_name} (Top {top_n} Categories)\")\n",
     "\n",
-    "    # Add category-wise totals (above each bar)\n",
     "    for i, count in enumerate(counts):\n",
     "        plt.text(i, count + 0.1, str(count), ha='center', fontsize=12, fontweight='bold', color='black')\n",
     "\n",
-    "    # Plot 2: Pie Chart\n",
-    "    plt.subplot(2, 2, 2)  # 2 rows, 2 columns, 2nd plot\n",
+    "    plt.subplot(2, 2, 2)  \n",
     "    plt.pie(counts, labels=labels, autopct='%1.1f%%', colors=plt.cm.Paired.colors)\n",
     "    plt.title(f\"Distribution of {column_name} (Pie Chart)\")\n",
     "\n",
-    "    # Plot 3: Word Cloud (Only for text-based columns)\n",
-    "    plt.subplot(2, 2, 3)  # 2 rows, 2 columns, 3rd plot\n",
-    "    if df[column_name].dtype == 'object':  # Check if column contains textual data\n",
+    "    \n",
+    "    plt.subplot(2, 2, 3)  \n",
+    "    if df[column_name].dtype == 'object':  \n",
     "        text = \" \".join(df[column_name].dropna())\n",
     "        wordcloud = WordCloud(width=800, height=400, background_color=\"white\").generate(text)\n",
     "\n",
@@ -361,12 +441,10 @@
     "        plt.axis('off')\n",
     "        plt.title(f\"Word Cloud for {column_name}\")\n",
     "    else:\n",
-    "        plt.axis('off')  # Hide axis if no word cloud\n",
-    "    \n",
-    "    # Plot 4: Heatmap (Alternative Visualization)\n",
-    "    plt.subplot(2, 2, 4)  # 2 rows, 2 columns, 4th plot\n",
-    "    # Heatmap: Convert counts into a DataFrame and display it as a heatmap-like effect\n",
-    "    heatmap_data = np.array(counts).reshape(1, -1)  # Reshape to a 2D array for heatmap-like effect\n",
+    "        plt.axis('off')  \n",
+    "    plt.subplot(2, 2, 4) \n",
+    "   \n",
+    "    heatmap_data = np.array(counts).reshape(1, -1) \n",
     "    plt.imshow(heatmap_data, aspect='auto', cmap='Blues')\n",
     "    plt.colorbar(label=\"Count\")\n",
     "    plt.title(f\"Heatmap for {column_name}\")\n",
@@ -385,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
