added save report functionality for string column analysis

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def save_string_report(df, column_name, output_folder=\"output\", top_n=10):\n",
+    "    if column_name not in df.columns:\n",
+    "        print(f\"Column '{column_name}' not found in DataFrame.\")\n",
+    "        return\n",
+    "    \n",
+    "    # os.makedirs(output_folder, exist_ok=True)  \n",
+    "    # report_path = os.path.join(output_folder, f\"{column_name}_report.txt\")  \n",
+    "    # img_path = os.path.join(output_folder, f\"{column_name}_visualization.png\")  \n",
+    "\n",
+    "    \n",
+    "    value_counts = Counter(df[column_name].dropna())\n",
+    "\n",
+    "    if len(value_counts) > top_n:\n",
+    "        most_common = dict(value_counts.most_common(top_n))\n",
+    "        others_count = sum(count for key, count in value_counts.items() if key not in most_common)\n",
+    "        most_common[\"Others\"] = others_count\n",
+    "        value_counts = most_common\n",
+    "\n",
+    "    labels = list(value_counts.keys())\n",
+    "    counts = list(value_counts.values())\n",
+    "\n",
+    "    plt.figure(figsize=(14, 8))\n",
+    "\n",
+    "    plt.subplot(2, 2, 1)\n",
+    "    plt.bar(labels, counts, color='darkblue')\n",
+    "    plt.xlabel(\"Category\")\n",
+    "    plt.ylabel(\"Count\")\n",
+    "    plt.title(f\"Distribution of {column_name} (Top {top_n} Categories)\")\n",
+    "    plt.xticks(rotation=45, ha=\"right\")\n",
+    "    \n",
+    "    for i, count in enumerate(counts):\n",
+    "        plt.text(i, count + 0.1, str(count), ha='center', fontsize=12, fontweight='bold', color='black')\n",
+    "\n",
+    "    plt.subplot(2, 2, 2)\n",
+    "    plt.pie(counts, labels=labels, autopct='%1.1f%%', colors=plt.cm.Paired.colors)\n",
+    "    plt.title(f\"Distribution of {column_name} (Pie Chart)\")\n",
+    "\n",
+    "    plt.subplot(2, 2, 3)\n",
+    "    text = \" \".join(df[column_name].dropna())\n",
+    "    wordcloud = WordCloud(width=800, height=400, background_color=\"white\").generate(text)\n",
+    "    plt.imshow(wordcloud, interpolation=\"bilinear\")\n",
+    "    plt.axis('off')\n",
+    "    plt.title(f\"Word Cloud for {column_name}\")\n",
+    "\n",
+    "    plt.subplot(2, 2, 4)\n",
+    "    heatmap_data = np.array(counts).reshape(1, -1)\n",
+    "    plt.imshow(heatmap_data, aspect='auto', cmap='Blues')\n",
+    "    plt.colorbar(label=\"Count\")\n",
+    "    plt.title(f\"Heatmap for {column_name}\")\n",
+    "    plt.xticks(ticks=np.arange(len(labels)), labels=labels, rotation=90)\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    # plt.savefig(img_path)  \n",
+    "    \n",
+    "\n",
+    "\n",
+    "    folder_path = input(\"Enter the full path or name of the folder to save the report and heatmap: \").strip()\n",
+    "    os.makedirs(folder_path, exist_ok=True)\n",
+    "    \n",
+    "    new_folder_path = os.path.join(folder_path, \"report.txt\")\n",
+    "\n",
+    "    with open(new_folder_path, \"w\", encoding=\"utf-8\") as file:\n",
+    "        file.write(f\"Report for Column: {column_name}\\n\")\n",
+    "        file.write(\"=\" * 40 + \"\\n\\n\")\n",
+    "        file.write(f\"Total Unique Values: {len(value_counts)}\\n\")\n",
+    "        file.write(\"\\nTop Occurring Values:\\n\")\n",
+    "\n",
+    "        for label, count in zip(labels, counts):\n",
+    "            file.write(f\"{label}: {count}\\n\")\n",
+    "\n",
+    "        # file.write(\"\\nVisualization saved at: \" + img_path + \"\\n\")\n",
+    "    visualization_file = os.path.join(folder_path, \"visualization.png\")\n",
+    "    plt.savefig(visualization_file)\n",
+    "    plt.close()\n",
+    "    print(f\"Report saved: {new_folder_path}\")\n",
+    "    print(f\"Visualization saved: {visualization_file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,12 +544,15 @@
     "    print(f\"\\n====================================== Basic Analysis of '{column_name}' ===========================================\")\n",
     "    print(f\"Total unique values (Top {top_n} with 'Others'): {len(value_counts)}\")\n",
     "    for label, count in value_counts.items():\n",
-    "        print(f\"{label}: {count} occurrences\")\n"
+    "        print(f\"{label}: {count} occurrences\")\n",
+    "    choice=input(\"want to save this repiort (y/n) ?\")\n",
+    "    if(choice.lower()=='y'):\n",
+    "        save_string_report(df, column_name, top_n)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
