added edit data functionality with save edited df as csv file without testing

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,8 +570,7 @@
     "            while(b1):\n",
     "                print(\"1. Analyze Two Numeric Columns\")\n",
     "                print(\"2. Analyze One Numeric and One String\")\n",
-    "                print(\"3. Analyze One Numeric Column\")\n",
-    "                print(\"4. Return\")\n",
+    "                print(\"3. Return\")\n",
     "                choice=input(\"Enter Choice: \").strip()\n",
     "                if(choice==\"1\"):\n",
     "                  col1=input('Enter 1st Numeric Column')\n",
@@ -583,10 +582,7 @@
     "                    col2=input('Enter String Column')\n",
     "                    plot_string_column(df, col2)\n",
     "                elif(choice==\"3\"):\n",
-    "                  col1=input('Enter 1st Numeric Column')\n",
-    "                  Custom_Analysis(df, col1, col2, 3)\n",
-    "                elif (choice==\"4\"):\n",
-    "                   b1=False\n",
+    "                  b1=False\n",
     "                else:\n",
     "                  print(\"Please Enter Valid Choice !\")\n",
     "        elif(choice==\"3\"):\n",
@@ -598,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,8 +610,7 @@
     "          path = input(\"Enter File Path of CSV File: \")\n",
     "          try:\n",
     "              df = pd.read_csv(path, encoding='unicode_escape')\n",
-    "              print(\"egmerjngkjerner fjer\")\n",
-    "              Analyze_Data(df)\n",
+    "              return df\n",
     "          except (FileNotFoundError, Exception) as e:\n",
     "              print(f\"Error: {e}\")\n",
     "            #   print(\"CSV File not found. Try again !\")\n",
@@ -624,7 +619,7 @@
     "              path = input(\"Enter File Path of Parquet File: \")\n",
     "              try:\n",
     "                  df = pd.read_parquet(path)\n",
-    "                  Analyze_Data(df)\n",
+    "                  return df\n",
     "              except (FileNotFoundError, Exception) as e:\n",
     "                  print(f\"Error: {e}\")\n",
     "                  print(\"Parquet File not found. Try again !\")\n",
@@ -632,7 +627,7 @@
     "              path = input(\"Enter File Path of Excel File: \")\n",
     "              try:\n",
     "                  df = pd.read_excel(path)\n",
-    "                  Analyze_Data(df)\n",
+    "                  return df\n",
     "              except (FileNotFoundError, Exception) as e:\n",
     "                  print(f\"Error: {e}\")\n",
     "                  print(\"Excel File not found. Try again !\")\n",
@@ -645,11 +640,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Edit_Data():\n",
+    "def save_dataset(df):\n",
+    "    \"\"\"Saves the dataset to a user-specified path.\"\"\"\n",
+    "    save_path = input(\"Enter the path to save the edited CSV file: \")\n",
+    "    try:\n",
+    "        df.to_csv(save_path, index=False)\n",
+    "        print(f\"\\nDataset saved successfully at {save_path}!\\n\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error saving dataset: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Edit_Data(df):\n",
     "    b = True\n",
     "    while b:\n",
     "        print(\"1. Add a New Row\")\n",
@@ -667,37 +678,89 @@
     "        choice = input(\"Enter Choice: \")\n",
     "        \n",
     "        if choice == \"1\":\n",
-    "            print(\"Adding a new row...\")\n",
-    "            pass\n",
+    "            print(\"\\nAdding a new row:\")\n",
+    "            new_row = {}\n",
+    "            for col in df.columns:\n",
+    "                new_row[col] = input(f\"Enter value for {col}: \")\n",
+    "            df = df.append(new_row, ignore_index=True)\n",
+    "            print(\"\\nRow added successfully!\")\n",
     "        elif choice == \"2\":\n",
-    "            print(\"Updating an existing row...\")\n",
-    "            pass\n",
+    "            print(\"\\nUpdating an existing row:\")\n",
+    "            row_index = int(input(\"Enter row index to update: \"))\n",
+    "            if 0 <= row_index < len(df):\n",
+    "                col_name = input(\"Enter column name to update: \")\n",
+    "                new_value = input(\"Enter new value: \")\n",
+    "                df.at[row_index, col_name] = new_value\n",
+    "                print(\"\\nRow updated successfully!\")\n",
+    "            else:\n",
+    "                print(\"\\nInvalid row index!\")\n",
     "        elif choice == \"3\":\n",
-    "            print(\"Deleting a row...\")\n",
-    "            pass\n",
+    "            print(\"\\nDeleting a row:\")\n",
+    "            row_index = int(input(\"Enter row index to delete: \"))\n",
+    "            if 0 <= row_index < len(df):\n",
+    "                df = df.drop(index=row_index).reset_index(drop=True)\n",
+    "                print(\"\\nRow deleted successfully!\")\n",
+    "            else:\n",
+    "                print(\"\\nInvalid row index!\")\n",
     "        elif choice == \"4\":\n",
-    "            print(\"Editing specific column data...\")\n",
-    "            pass\n",
+    "            print(\"\\nEditing specific column data:\")\n",
+    "            col_name = input(\"Enter column name: \")\n",
+    "            if col_name in df.columns:\n",
+    "                df[col_name] = df[col_name].apply(lambda x: input(f\"Enter new value for {x}: \"))\n",
+    "                print(\"\\nColumn updated successfully!\")\n",
+    "            else:\n",
+    "                print(\"\\nInvalid column name!\")\n",
     "        elif choice == \"5\":\n",
-    "            print(\"Filling missing data...\")\n",
-    "            pass\n",
+    "            print(\"\\nFilling missing data:\")\n",
+    "            fill_method = input(\"Enter 'mean', 'median', 'mode', or a specific value: \")\n",
+    "            if fill_method == \"mean\":\n",
+    "                df.fillna(df.mean(), inplace=True)\n",
+    "            elif fill_method == \"median\":\n",
+    "                df.fillna(df.median(), inplace=True)\n",
+    "            elif fill_method == \"mode\":\n",
+    "                df.fillna(df.mode().iloc[0], inplace=True)\n",
+    "            else:\n",
+    "                df.fillna(fill_method, inplace=True)\n",
+    "            print(\"\\nMissing values filled successfully!\")\n",
     "        elif choice == \"6\":\n",
-    "            print(\"Renaming columns...\")\n",
-    "            pass\n",
+    "            print(\"\\nRenaming columns:\")\n",
+    "            print(\"Current columns:\", list(df.columns))\n",
+    "            old_col = input(\"Enter the column name to rename: \")\n",
+    "            new_col = input(\"Enter the new column name: \")\n",
+    "            df.rename(columns={old_col: new_col}, inplace=True)\n",
+    "            print(\"\\nColumn renamed successfully!\")\n",
     "        elif choice == \"7\":\n",
-    "            print(\"Changing data type of a column...\")\n",
-    "            pass\n",
+    "            print(\"\\nChanging data type of a column:\")\n",
+    "            col_name = input(\"Enter column name: \")\n",
+    "            new_type = input(\"Enter new data type (int, float, str): \")\n",
+    "            try:\n",
+    "                if new_type == \"int\":\n",
+    "                    df[col_name] = df[col_name].astype(int)\n",
+    "                elif new_type == \"float\":\n",
+    "                    df[col_name] = df[col_name].astype(float)\n",
+    "                elif new_type == \"str\":\n",
+    "                    df[col_name] = df[col_name].astype(str)\n",
+    "                print(\"\\nData type changed successfully!\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error changing data type: {e}\")\n",
     "        elif choice == \"8\":\n",
-    "            print(\"Sorting data...\")\n",
-    "            pass\n",
+    "            print(\"\\nSorting data:\")\n",
+    "            col_name = input(\"Enter column name to sort by: \")\n",
+    "            order = input(\"Enter 'asc' for ascending or 'desc' for descending: \")\n",
+    "            df = df.sort_values(by=col_name, ascending=(order == \"asc\"))\n",
+    "            print(\"\\nData sorted successfully!\")\n",
     "        elif choice == \"9\":\n",
-    "            print(\"Filtering data...\")\n",
-    "            pass\n",
+    "            print(\"\\nFiltering data:\")\n",
+    "            col_name = input(\"Enter column name to filter by: \")\n",
+    "            filter_value = input(\"Enter value to filter: \")\n",
+    "            df = df[df[col_name] == filter_value]\n",
+    "            print(\"\\nData filtered successfully!\")\n",
     "        elif choice == \"10\":\n",
-    "            print(\"Removing duplicates...\")\n",
-    "            pass\n",
+    "            print(\"\\nRemoving duplicates:\")\n",
+    "            df.drop_duplicates(inplace=True)\n",
+    "            print(\"\\nDuplicates removed successfully!\")\n",
     "        elif choice == \"11\":\n",
-    "            print(\"Returning to main menu...\")\n",
+    "            save_dataset(df)\n",
     "            b = False\n",
     "        else:\n",
     "            print(\"Please Enter a Valid Choice!\")\n"
@@ -718,9 +781,11 @@
     "    print(\"5. Exit\")\n",
     "    choice=input(\"Enter Choice: \")\n",
     "    if(choice==\"1\"):\n",
-    "        Load_Data()\n",
+    "        df = Load_Data()\n",
+    "        Analyze_Data(df)\n",
     "    elif(choice==\"2\"):\n",
-    "        print(2)\n",
+    "        df = Load_Data()\n",
+    "        Edit_Data(df)\n",
     "        pass\n",
     "    elif(choice==\"3\"):\n",
     "        print(3)\n",
