--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +682,7 @@
     "            new_row = {}\n",
     "            for col in df.columns:\n",
     "                new_row[col] = input(f\"Enter value for {col}: \")\n",
-    "            df = df.append(new_row, ignore_index=True)\n",
+    "            df.loc[len(df)] = new_row \n",
     "            print(\"\\nRow added successfully!\")\n",
     "        elif choice == \"2\":\n",
     "            print(\"\\nUpdating an existing row:\")\n",
@@ -750,11 +750,40 @@
     "            df = df.sort_values(by=col_name, ascending=(order == \"asc\"))\n",
     "            print(\"\\nData sorted successfully!\")\n",
     "        elif choice == \"9\":\n",
-    "            print(\"\\nFiltering data:\")\n",
-    "            col_name = input(\"Enter column name to filter by: \")\n",
-    "            filter_value = input(\"Enter value to filter: \")\n",
-    "            df = df[df[col_name] == filter_value]\n",
-    "            print(\"\\nData filtered successfully!\")\n",
+    "           print(\"\\nFiltering data:\")\n",
+    "           col_name = input(\"Enter column name to filter by: \")\n",
+    "\n",
+    "            # Check if column exists\n",
+    "           if col_name not in df.columns:\n",
+    "                print(\"Error: Column does not exist!\")\n",
+    "           else:\n",
+    "                print(\"\\nChoose filter type:\")\n",
+    "                print(\"1. Equal to (==)\")\n",
+    "                print(\"2. Greater than (>)\")\n",
+    "                print(\"3. Smaller than (<)\")\n",
+    "                filter_type = input(\"Enter choice (1/2/3): \")\n",
+    "\n",
+    "                filter_value = input(f\"Enter value to filter {col_name} by: \")\n",
+    "\n",
+    "                try:\n",
+    "                    # Convert filter_value to correct type (int/float if possible)\n",
+    "                    if df[col_name].dtype in ['int64', 'float64']:  \n",
+    "                        filter_value = float(filter_value) if '.' in filter_value else int(filter_value)\n",
+    "                    \n",
+    "                    # Apply filtering based on user's choice\n",
+    "                    if filter_type == \"1\":\n",
+    "                        df = df[df[col_name] == filter_value]\n",
+    "                    elif filter_type == \"2\":\n",
+    "                        df = df[df[col_name] > filter_value]\n",
+    "                    elif filter_type == \"3\":\n",
+    "                        df = df[df[col_name] < filter_value]\n",
+    "                    else:\n",
+    "                        print(\"Invalid filter choice!\")\n",
+    "\n",
+    "                    print(\"\\nData filtered successfully!\")\n",
+    "\n",
+    "                except ValueError:\n",
+    "                    print(\"Error: Filter value type does not match column type!\")\n",
     "        elif choice == \"10\":\n",
     "            print(\"\\nRemoving duplicates:\")\n",
     "            df.drop_duplicates(inplace=True)\n",
