checked for completely empty columns in custom analysis of two numeric columns

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
     "    null_values = df.isnull().sum()\n",
     "    print(null_values)\n",
     "    print(\"\\n\")\n",
-    "    numdf = df.select_dtypes(include=['number']).dropna()\n",
+    "    numdf = df.select_dtypes(include=['number']).fillna(0)\n",
     "    print(\"DESCRIPTIVE STATISTICS (NUMERICAL)\".center(60, \"-\"))\n",
     "    des = numdf.describe()\n",
     "    print(tabulate(des, headers='keys', tablefmt='psql'))\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,19 +286,34 @@
     "    if not pd.api.types.is_numeric_dtype(df[col2_actual]):\n",
     "        print(f\"❌ Error: Column '{col2_actual}' is not numeric.\")\n",
     "        return\n",
+    "    \n",
+    "    if(df[col1].isna().all() or (df[col1]==\"\").all()):\n",
+    "        print(f'column {col1} is completely Empty !')\n",
+    "        return\n",
+    "    if(df[col2].isna().all() or (df[col2]==\"\").all()):\n",
+    "        print(f'column {col2} is completely Empty !')\n",
     "\n",
+    "    print(df[col1_actual], \"hello -1\")\n",
+    "    print(df[col2_actual], \"hello 0\")\n",
     "    df[col1_actual] = pd.to_numeric(df[col1_actual], errors='coerce')\n",
     "    df[col2_actual] = pd.to_numeric(df[col2_actual], errors='coerce')\n",
-    "\n",
-    "    df.dropna(inplace=True)  \n",
+    "    \n",
+    "    # this wont work in diwali sales cause status and unamed are totally empty so it will delete all rows\n",
+    "    # df.dropna(inplace=True)  \n",
     "    \n",
     "    column1_data = df[col1_actual]\n",
     "    column2_data = df[col2_actual]\n",
+    "    print(df[col1_actual], \"hello 0.25\")\n",
+    "    print(df[col2_actual], \"hello 0.35\")\n",
+    "    print(column1_data, \"hello 0.5\")\n",
+    "    print(column2_data, \"hello 0.75\")\n",
     "    \n",
     "\n",
     "    print(\"=============================== Preview ================================\")\n",
     "    column1_data_df = column1_data.head().to_frame()\n",
     "    column2_data_df = column2_data.head().to_frame()\n",
+    "    print(column1_data_df, \"hello 1\")\n",
+    "    print(column2_data_df, \"hello 2\")\n",
     "    print(f\"Data for {col1_actual}:\\n\", tabulate(column1_data_df, headers='keys', tablefmt='psql'), \"\\n\")\n",
     "    print(f\"Data for {col2_actual}:\\n\", tabulate(column2_data_df, headers='keys', tablefmt='psql'), \"\\n\")\n",
     "    print(f\"================================ Summary Statistics for {col1_actual} ======================================\")\n",
@@ -395,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +584,7 @@
     "            b1=True\n",
     "            while(b1):\n",
     "                print(\"1. Analyze Two Numeric Columns\")\n",
-    "                print(\"2. Analyze One Numeric and One String\")\n",
+    "                print(\"2. Analyze String Column\")\n",
     "                print(\"3. Return\")\n",
     "                choice=input(\"Enter Choice: \").strip()\n",
     "                if(choice==\"1\"):\n",
@@ -594,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
